fix: added mb anchoring proof
