# src/indexer-sdk/model/index.ts
@@ -11,6 +11,7 @@ export * from './accountHistoryDto';
 export * from './accountHistoryListResponseDto';
 export * from './accountListResponseDto';
 export * from './accountProofResponseDto';
+export * from './accountProofWrapperDto';
 export * from './appControllerGetAccountHistoryOrder';
 export * from './appControllerGetAccountHistoryParams';
 export * from './appControllerGetAccountHistorySort';
@@ -60,6 +61,7 @@ export * from './microblockListResponseDto';
 export * from './microblockProofMicroblockDto';
 export * from './microblockProofResponseDto';
 export * from './microblockProofVirtualBlockchainDto';
+export * from './microblockProofWrapperDto';
 export * from './microblockStatsResponseDto';
 export * from './nodePeriodRewardDto';
 export * from './nodeRewardResponseDto';
